common/vue-components/xaidemo-ui/src/assets/main.css
* {
    box-sizing: border-box;
}

body {
    padding: 0;
    margin: 0;
}

h3 {
    margin: 0;
    padding: 0;
}

p {
    margin: 0;
    padding: 0;
    font-size: 1em;
}

*:active {
    outline: none;
}

*:focus {
    outline: none;
}

/* APP CONTAINER */

.xd-app {
    font-family: Avenir, Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: #000000;
    background-color: #ffffff;
    height: 100vh;
    width: 100vw;
}

@media screen and (max-width: 450px) {
    .xd-app {
        padding: 54px 8px 8px;
        overflow: scroll;
    }
}

@media screen and (min-width: 450px) and (max-height: 650px) {
    .xd-app {
        padding: 54px 8px 8px;
        overflow: scroll;
    }
}

@media screen and (min-width: 450px) and (min-height: 650px) {

    body {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100vw;
        height: 100vh;
    }

    .xd-app {
        height: auto;
        min-height: 640px;
        max-width: 450px;

        padding: 8px;
        overflow: auto;

        border: 1px solid #ddd;
        box-shadow: 2px 2px 4px rgba(120, 120, 120, 0.4);
    }

    .xd-app main {
        padding: 4px;
    }
}

/* COLORS */
/* selected from https://www.schemecolor.com/professional-blue-and-grey-color-scheme.php */

.xd-primary {
    background-color: #323232;
    color: #EBEBEB;
}

.xd-fill-primary {
    fill: #323232;
    color: #EBEBEB;
}

.xd-light {
    background-color: #EBEBEB;
    color: #323232;
}

.xd-secondary {
    background-color: #103260;
    color: #EBEBEB;
}

.xd-fill-secondary {
    fill: #103260;
    color: #EBEBEB;
}

.xd-green {
    background-color: #00887a;
    color: #fff;
}

.xd-red {
    background-color: #CC0000;
    color: #fff;
}

/* BORDERS */

.xd-border-primary {
    border: 1px solid #323232;
}

.xd-border-light {
    border: 1px solid #EBEBEB;
}

.xd-border-secondary {
    border: 1px solid #103260;
}

/* SECTION */

.xd-section {
    width: 100%;
    margin-bottom: 12px;
    padding: 10px;
    border-radius: 3px;
    box-shadow: 2px 2px 4px rgba(180, 180, 180, 0.5);
}

.xd-section:last-child {
    margin-bottom: 0;
}

.xd-section h3 {
    font-size: 1em;
    font-weight: 600;
}

.xd-section p {
    margin-block: 8px 4px;
}

.xd-section p:first-child {
    margin-block: 4px 4px;
}

/* BUTTON */

.xd-button {
    position: relative;
    display: block;

    height: auto;
    width: 100%;
    padding: 10px;

    border: 0;
    outline: 0;
    border-radius: 3px;

    font-size: 1em;
    font-weight: normal;
    text-align: center;

    appearance: none;
}

.xd-button::after {
    position: absolute;
    content: " ";

    background-color: #000;
    opacity: 0;

    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.xd-button:active::after {
    opacity: .4;
}

.xd-button:disabled {
    opacity: .6;
}

a.xd-button {
    text-decoration: none;
}

